--- a/src/index.html
+++ b/src/index.html
@@ -8,166 +8,105 @@
   </head>
 
   <body>
-    <div class="calendar
-    calendar--start-day
-    calendar--month-length
-    ">
+    <div
+      class="calendar
+      calendar--start-day-tue
+      calendar--month-length-31"
+      >
 
-      <div class="
-        calendar__number
-        calendar__number--1
-        calendar__number--mon
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--2
-        calendar__number--tue
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--3
-        calendar__number--wed
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--4
-        calendar__number--thu
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--5
-        calendar__number--fri
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--6
-        calendar__number--sat
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--7
-        calendar__number--sun
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--8
-        calendar__number--mon
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--9
-        calendar__number--tue
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--10
-        calendar__number--wed
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--11
-        calendar__number--thu
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--12
-        calendar__number--fri
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--13
-        calendar__number--sat
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--14
-        calendar__number--sun
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--15
-        calendar__number--mon
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--16
-        calendar__number--tue
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--17
-        calendar__number--wed
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--18
-        calendar__number--thu
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--19
-        calendar__number--fri
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--20
-        calendar__number--sat
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--21
-        calendar__number--sun
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--22
-        calendar__number--mon
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--23
-        calendar__number--tue
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--24
-        calendar__number--wed
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--25
-        calendar__number--thu
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--26
-        calendar__number--fri
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--27
-        calendar__number--sat
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--28
-        calendar__number--sun
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--29
-        calendar__number--mon
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--30
-        calendar__number--tue
-        "></div>
-      <div class="
-        calendar__number
-        calendar__number--31
-        calendar__number--wed
-        "></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
+      <div
+        class="calendar__number"
+        ></div>
 
     </div>
   </body>
