--- a/src/index.html
+++ b/src/index.html
@@ -10,103 +10,41 @@
   <body>
     <div
       class="calendar
-      calendar--start-day-tue
-      calendar--month-length-31"
+      calendar--start-day-sun
+      calendar--month-length-30"
       >
 
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
-      <div
-        class="calendar__number"
-        ></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
+      <div class="calendar__number"></div>
 
     </div>
   </body>
