--- a/src/index.html
+++ b/src/index.html
@@ -8,37 +8,37 @@
   </head>
   <body>
     <ul class="calendar calendar--start-day-mon calendar--month-length-31">
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
-      <li class="calendar__item"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
     </ul>
   </body>
 </html>
