--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,7 @@
   </head>
   <body>
     <div
-      class="calendar
-      calendar--start--sun
-      calendar--month-length--28"
-    >
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
+      class="calendar calendar--start--sun calendar--month-length--28">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
