--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,8 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="body">
-    <div
-      class="calendar
-      calendar--start-day-mon
-      calendar--month-length-30"
-    >
+    <div class="calendar calendar--start-day-mon calendar--month-length-31">
+
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
