--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
   <body class="page__body">
     <div class="page__container">
-      <div class="calendar calendar--start-day--sun calendar--month-length--31">
+      <div class="calendar calendar--start-day-sun calendar--month-length-31">
         <div></div>
         <div></div>
         <div></div>
