--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   <body class="page__body">
     <div class="
       calendar
-      calendar--month-length-29
-      calendar--start-day--thu">
+      calendar--month-length-31
+      calendar--start-day-sun">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
