add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,70 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
+  <body class="body">
     <h1>Calendar</h1>
+    <ul class="calendar calendar--start-day-sun calendar--month-length-31">
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+    </ul>
   </body>
 </html>
