--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <div class="calendar calendar--month-length--30 calendar--start-day-sun">
+  <body class="body">
+    <div class="calendar calendar--month-length-31 calendar--start-day-sun">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
