add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -8,39 +8,39 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
 
-  <body>
-    <section class="calendar">
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
+  <body class="body">
+    <section class="calendar calendar--month-lenght-31 calendar--start-day-mon">
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </section>
   </body>
 
