improve markup and styles

--- a/src/index.html
+++ b/src/index.html
@@ -6,70 +6,72 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body class="body">
+  <body>
     <h1>Calendar</h1>
-    <ul class="calendar calendar--start-day-sun calendar--month-length-31">
-      <li class="calendar__item"></li>
+    <div class="wrapper">
+      <ul class="calendar calendar--start-day-sun calendar--month-length-31">
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
+        <li class="calendar__item"></li>
 
-      <li class="calendar__item"></li>
-    </ul>
+        <li class="calendar__item"></li>
+      </ul>
+    </div>
   </body>
 </html>
