--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="month month--length-30 month--start-day-tue">
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+      <div class="month-day"></div>
+    </div>
   </body>
 </html>
