fixing the month length modifier

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--month-length--31 calendar--start-day-sun">
+    <div class="calendar
+      calendar--month-length-31
+      calendar--start-day-sun">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
@@ -42,4 +44,3 @@
     </div>
   </body>
 </html>
-
