--- a/src/index.html
+++ b/src/index.html
@@ -7,39 +7,39 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--sun">
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
       <div class="calendar__board">
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
       </div>
     </div>
   </body>
