--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Roboto:ital,wght@0,500;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
     <div class="container">
-      <div class="weeks">
-        <div class="weeks__start">Mon</div>
-        <div class="weeks__start">Tue</div>
-        <div class="weeks__start">Wed</div>
-        <div class="weeks__start">Thu</div>
-        <div class="weeks__start">Fri</div>
-        <div class="weeks__start">Sat</div>
-        <div class="weeks__start">Sun</div>
-      </div>
+      <div class="calendar calendar--start-sun">
+        <div class="calendar__day"></div>
 
-      <div class="calendar">
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day calendar__day--today"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
@@ -43,13 +43,7 @@
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
+
         <div class="calendar__day"></div>
       </div>
     </div>
