--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <div class="calendar">
-      <div
-        class="month month--thu month--31">
+      <div class="month month--thu month--31">
         <div class="month__day"></div>
         <div class="month__day"></div>
         <div class="month__day"></div>
