--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,14 @@
   </head>
   <body>
     <div class="container">
-      <div class="calendar calendar--start-sun">
+      <div class="calendar calendar--month-length-31 calendar--start-day-sun ">
         <div class="calendar__day"></div>
 
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
-        <div class="calendar__day calendar__day--today"></div>
+        <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
