--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,42 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div
+      class="calendar
+      calendar--start-day-mon
+      calendar--month-length-31"
+    >
+      <div class="cell cell--1"></div>
+      <div class="cell cell--2"></div>
+      <div class="cell cell--3"></div>
+      <div class="cell cell--4"></div>
+      <div class="cell cell--5"></div>
+      <div class="cell cell--6"></div>
+      <div class="cell cell--7"></div>
+      <div class="cell cell--8"></div>
+      <div class="cell cell--9"></div>
+      <div class="cell cell--10"></div>
+      <div class="cell cell--11"></div>
+      <div class="cell cell--12"></div>
+      <div class="cell cell--13"></div>
+      <div class="cell cell--14"></div>
+      <div class="cell cell--15"></div>
+      <div class="cell cell--16"></div>
+      <div class="cell cell--17"></div>
+      <div class="cell cell--18"></div>
+      <div class="cell cell--19"></div>
+      <div class="cell cell--20"></div>
+      <div class="cell cell--21"></div>
+      <div class="cell cell--22"></div>
+      <div class="cell cell--23"></div>
+      <div class="cell cell--24"></div>
+      <div class="cell cell--25"></div>
+      <div class="cell cell--26"></div>
+      <div class="cell cell--27"></div>
+      <div class="cell cell--28"></div>
+      <div class="cell cell--29"></div>
+      <div class="cell cell--30"></div>
+      <div class="cell cell--31"></div>
+    </div>
   </body>
 </html>
