--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendarr</title>
+    <title>Calendar</title>
     <link rel="stylesheet" href="/src/styles/main.scss">
   </head>
 
