--- a/src/index.html
+++ b/src/index.html
@@ -12,37 +12,37 @@
       calendar--start-day-sun
       calendar--month-length-31"
     >
-      <div class="calendar__cell calendar__cell--1"></div>
-      <div class="calendar__cell calendar__cell--2"></div>
-      <div class="calendar__cell calendar__cell--3"></div>
-      <div class="calendar__cell calendar__cell--4"></div>
-      <div class="calendar__cell calendar__cell--5"></div>
-      <div class="calendar__cell calendar__cell--6"></div>
-      <div class="calendar__cell calendar__cell--7"></div>
-      <div class="calendar__cell calendar__cell--8"></div>
-      <div class="calendar__cell calendar__cell--9"></div>
-      <div class="calendar__cell calendar__cell--10"></div>
-      <div class="calendar__cell calendar__cell--11"></div>
-      <div class="calendar__cell calendar__cell--12"></div>
-      <div class="calendar__cell calendar__cell--13"></div>
-      <div class="calendar__cell calendar__cell--14"></div>
-      <div class="calendar__cell calendar__cell--15"></div>
-      <div class="calendar__cell calendar__cell--16"></div>
-      <div class="calendar__cell calendar__cell--17"></div>
-      <div class="calendar__cell calendar__cell--18"></div>
-      <div class="calendar__cell calendar__cell--19"></div>
-      <div class="calendar__cell calendar__cell--20"></div>
-      <div class="calendar__cell calendar__cell--21"></div>
-      <div class="calendar__cell calendar__cell--22"></div>
-      <div class="calendar__cell calendar__cell--23"></div>
-      <div class="calendar__cell calendar__cell--24"></div>
-      <div class="calendar__cell calendar__cell--25"></div>
-      <div class="calendar__cell calendar__cell--26"></div>
-      <div class="calendar__cell calendar__cell--27"></div>
-      <div class="calendar__cell calendar__cell--28"></div>
-      <div class="calendar__cell calendar__cell--29"></div>
-      <div class="calendar__cell calendar__cell--30"></div>
-      <div class="calendar__cell calendar__cell--31"></div>
+      <div class="calendar__day calendar__day--1"></div>
+      <div class="calendar__day calendar__day--2"></div>
+      <div class="calendar__day calendar__day--3"></div>
+      <div class="calendar__day calendar__day--4"></div>
+      <div class="calendar__day calendar__day--5"></div>
+      <div class="calendar__day calendar__day--6"></div>
+      <div class="calendar__day calendar__day--7"></div>
+      <div class="calendar__day calendar__day--8"></div>
+      <div class="calendar__day calendar__day--9"></div>
+      <div class="calendar__day calendar__day--10"></div>
+      <div class="calendar__day calendar__day--11"></div>
+      <div class="calendar__day calendar__day--12"></div>
+      <div class="calendar__day calendar__day--13"></div>
+      <div class="calendar__day calendar__day--14"></div>
+      <div class="calendar__day calendar__day--15"></div>
+      <div class="calendar__day calendar__day--16"></div>
+      <div class="calendar__day calendar__day--17"></div>
+      <div class="calendar__day calendar__day--18"></div>
+      <div class="calendar__day calendar__day--19"></div>
+      <div class="calendar__day calendar__day--20"></div>
+      <div class="calendar__day calendar__day--21"></div>
+      <div class="calendar__day calendar__day--22"></div>
+      <div class="calendar__day calendar__day--23"></div>
+      <div class="calendar__day calendar__day--24"></div>
+      <div class="calendar__day calendar__day--25"></div>
+      <div class="calendar__day calendar__day--26"></div>
+      <div class="calendar__day calendar__day--27"></div>
+      <div class="calendar__day calendar__day--28"></div>
+      <div class="calendar__day calendar__day--29"></div>
+      <div class="calendar__day calendar__day--30"></div>
+      <div class="calendar__day calendar__day--31"></div>
     </div>
   </body>
 </html>
