Fixed all problems

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
+      <div class="calendar__day" data-qa="hover"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
