add test solution

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,73 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
+
   <body>
-    <h1>Calendar</h1>
+    <div class="center">
+      <div class="calendar calendar__month-lenght--31 calendar--sun"> <!-- must did change two value  {month-lenght--$} {$month-lenght: $;}-->
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+        <div class="calendar__day"></div>
+
+      </div>
+    </div>
   </body>
 </html>
