--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="calendar">
-      <div class="month month--start-day--sun month--month-length--31">
+      <div class="month month--sun month--31">
         <div class="month__day"></div>
         <div class="month__day"></div>
         <div class="month__day"></div>
