--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="calendar
-      calendar--start-day--tue
-      calendar--month-length--29"
+      calendar--start-day-mon
+      calendar--month-length-31"
     >
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
