--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="center">
-      <div class="calendar calendar__month-lenght--31 calendar--sun"> <!-- must did change two value  {month-lenght--$} {$month-lenght: $;}-->
+      <div class="calendar calendar__month-lenght--30 calendar--sun"> 
         <div class="calendar__day"></div>
 
         <div class="calendar__day"></div>
