--- a/src/index.html
+++ b/src/index.html
@@ -8,70 +8,39 @@
   </head>
 
   <body>
-    <div class="center">
-      <div class="calendar calendar__month-lenght--30 calendar--sun">
+    <div class="container">
+      <div class="calendar calendar__month-length--31 calendar__start-day--sun">
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
         <div class="calendar__day"></div>
-
       </div>
     </div>
   </body>
